--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   excel: ^4.0.2
+  provider: ^6.1.1
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_local_notifications: ^16.3.2
+  flutter_native_splash: ^2.3.7
+  flutter_native_timezone_updated_gradle: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
